Tika update to v 3.x and other dependency updates.